--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,6 +71,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='http://profacebook.applytojob.com/apply/KNguSTIoDu/Data-Analyst-9591170'>Data Analyst (9591170) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/ironcladts/430ed39b-425f-4d74-b326-6077344de6c7'>Ironclad Technology Services - Oracle Database Analyst</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -153,7 +157,7 @@
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dv01/jobs/4498658002'>Job Application for Data Analyst, Capital Markets  at dv01</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dv01/jobs/4498658002'>Job Application for Data Analyst, Capital Markets  at dv01</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -203,7 +207,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
+<h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -239,7 +243,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698307417-vice-president-director-data-analysis'>Publicis Groupe Vice President Director, Data & Analysis | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698307417-vice-president-director-data-analysis'>Publicis Groupe Vice President Director, Data & Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -303,7 +307,7 @@
 <p><span class="badge badge-light">Toronto, ON  Toronto, ON</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/c00c156b-b7e5-4db1-b8b4-fb5e0d8e0493'>Datacom - Service Desk Analyst - Fixed Term</a></h5> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/c00c156b-b7e5-4db1-b8b4-fb5e0d8e0493'>Datacom - Service Desk Analyst - Fixed Term</a></h5> 
 <p><span class="badge badge-light">Adelaide</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -327,7 +331,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435765002'>Job Application for Data Analyst, Data Science & Analytics at QuestBridge</a></h5> 
+<h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435765002'>Job Application for Data Analyst, Data Science & Analytics at QuestBridge</a></h5> 
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -356,7 +360,7 @@
 <p>1 day ago ... We are looking for a talented Data Analyst to join gov.au Observatory, to help us 
 achieve our mission to quantify user interactions with government services.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tiaa.referrals.selectminds.com/jobs/datastage-systems-analyst-2942'>DataStage Systems Analyst - TIAA Careers</a></h5> 
+<h5><a href='https://tiaa.referrals.selectminds.com/jobs/datastage-systems-analyst-2942'>DataStage Systems Analyst - TIAA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -378,7 +382,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opentextats.avature.net/careers/JobDetail/Southfield-Michigan-United-States-Senior-Data-Integration-Analyst/26369'>Senior Data Integration Analyst - US, MI, Southfield - 26369</a></h5> 
+<h5><a href='https://opentextats.avature.net/careers/JobDetail/Southfield-Michigan-United-States-Senior-Data-Integration-Analyst/26369'>Senior Data Integration Analyst - US, MI, Southfield - 26369</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -438,7 +442,7 @@ organization?...</p>
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kyivstar/f6efa962-89d1-4db6-bdd2-e48a454781f4/apply'>Kyivstar - Data Analyst BI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kyivstar/f6efa962-89d1-4db6-bdd2-e48a454781f4/apply'>Kyivstar - Data Analyst BI</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 20, 2019 ... Data Analyst BI. Kyiv, Ukraine. KYIVSTAR ???????? ? Analytical Hub & CEM. Full
 -time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
@@ -455,11 +459,11 @@ organization?...</p>
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mdanderson.referrals.selectminds.com/jobs/data-management-analyst-faculty-academic-affairs-23181'>Data Management Analyst - Faculty Academic Affairs - MD Anderson Cancer Center Careers</a></h5> 
+<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/data-management-analyst-faculty-academic-affairs-23181'>Data Management Analyst - Faculty Academic Affairs - MD Anderson Cancer Center Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://translations.recruitee.com/l/fr/o/language-data-analyst-spanish-and-english-speakers'>
+<h5><a href='https://translations.recruitee.com/l/fr/o/language-data-analyst-spanish-and-english-speakers'>
       Language Data Analyst - Spanish and English Speakers - TransPerfect
     </a></h5> 
 <p><span class="badge badge-light">Tempe, ?tats-Unis</span></p>
@@ -491,12 +495,8 @@ organization?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ibxhome.referrals.selectminds.com/jobs/medical-data-analyst-2640'>Medical Data Analyst - Independence Blue Cross Careers</a></h5> 
+<h5><a href='https://ibxhome.referrals.selectminds.com/jobs/medical-data-analyst-2640'>Medical Data Analyst - Independence Blue Cross Careers</a></h5> 
 <p><span class="badge badge-light">Philadelphia, Pennsylvania</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='http://thebizzellgroup.applytojob.com/apply/56qtNULS51/Data-Research-Analyst'>Data Research Analyst - The Bizzell Group - Career Page</a></h5> 
-<p><span class="badge badge-light">Lanham, MD</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
